--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ section {
     padding-left: 32px;
     text-align: left;
     box-sizing: border-box;
+    box-shadow: 0px 10px 25px -15px black;
 }
 
 section h2 {
